<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:orientation="vertical"
  	android:background="@drawable/gradient_bg">
  	
	<com.uhf.uhf.TitleGoToMain
		android:id="@+id/title_goto_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<com.uhf.uhf.LogList
		android:id="@+id/log_list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" />

	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:fadingEdge="vertical"
	    android:background="#EEEEEE"
	    android:fillViewport="true"
	    android:scrollbars="vertical"
	    android:layout_above="@id/log_list"
	    android:layout_below="@id/title_goto_main" >

		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
	    
		    <TextView
				android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10.0dip"
	            android:layout_marginTop="10.0dip"
	            android:gravity="center_vertical"
	            android:paddingLeft="4.0dip"
	            android:text="@string/setting_monza"
	            android:textColor="#ff222222"
	            android:textSize="16.0sp" />
		    
			<LinearLayout 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="10.0dip"
				android:paddingTop="5.0dip"
				android:paddingRight="10.0dip"
				android:paddingBottom="5.0dip"
				android:orientation="vertical" >

		        <RadioGroup
		            android:id="@+id/group_monza_status"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:orientation="horizontal" >
	
		            <RadioButton
		                android:id="@+id/set_monza_open"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:button="@drawable/radio_button_selector"
		                android:paddingTop="5sp"
		            	android:paddingBottom="5sp"
		                android:text="@string/open"
		                android:textColor="#ff222222"
		                android:textSize="16.0sp" />
		
		            <RadioButton
		                android:id="@+id/set_monza_close"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:button="@drawable/radio_button_selector"
		                android:paddingTop="5sp"
		            	android:paddingBottom="5sp"
		                android:layout_marginLeft="20sp"
		                android:checked="true"
		                android:text="@string/close"
		                android:textColor="#ff222222"
		                android:textSize="16.0sp" />
	        	</RadioGroup>
	        	
				<RadioGroup
		            android:id="@+id/group_monza_store"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:orientation="horizontal" >
	
		            <RadioButton
		                android:id="@+id/set_monza_save"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:button="@drawable/radio_button_selector"
		                android:paddingTop="5sp"
		            	android:paddingBottom="5sp"
		                android:text="@string/save"
		                android:textColor="#ff222222"
		                android:textSize="16.0sp" />
		
		            <RadioButton
		                android:id="@+id/set_monza_unsave"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:button="@drawable/radio_button_selector"
		                android:paddingTop="5sp"
		            	android:paddingBottom="5sp"
		            	android:checked="true"
		                android:layout_marginLeft="20sp"
		                android:text="@string/unsave"
		                android:textColor="#ff222222"
		                android:textSize="16.0sp" />
	        	</RadioGroup>
	        	
				<LinearLayout
		            android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal" >
		            
					<TextView
					    android:id="@+id/get"
						android:layout_width="fill_parent"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1.0"
						android:layout_marginLeft="20.0sp"
						android:layout_marginTop="20.0sp"
						android:layout_marginRight="20.0sp"
						android:layout_marginBottom="5.0sp"
						android:paddingTop="10.0sp"
						android:paddingBottom="10.0sp"
						android:gravity="center_horizontal"
						android:background="@drawable/button_selector"
						android:text="@string/get"
						android:textColor="#ff222222"
						android:textStyle="bold"
						android:textSize="16.0sp"
						android:clickable="true" />

					<TextView
					    android:id="@+id/set"
						android:layout_width="fill_parent"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1.0"
						android:layout_marginLeft="20.0sp"
						android:layout_marginTop="20.0sp"
						android:layout_marginRight="20.0sp"
						android:layout_marginBottom="5.0sp"
						android:paddingTop="10.0sp"
						android:paddingBottom="10.0sp"
						android:gravity="center_horizontal"
						android:background="@drawable/button_selector"
						android:text="@string/set"
						android:textColor="#ff222222"
						android:textStyle="bold"
						android:textSize="16.0sp"
						android:clickable="true" />
				</LinearLayout>
				
				<TextView
					android:layout_width="wrap_content"
		         	android:layout_height="wrap_content"
		         	android:gravity="center_vertical"
		         	android:paddingTop="20.0sp"
		         	android:text="@string/desc"
		         	android:textColor="#ff222222"
		         	android:textSize="14.0sp" />
				
				<TextView
					android:layout_width="wrap_content"
		         	android:layout_height="wrap_content"
		         	android:gravity="center_vertical"
		         	android:paddingLeft="15.0sp"
		         	android:paddingTop="5.0sp"
		         	android:text="@string/desc_monza_1"
		         	android:textColor="#ff222222"
		         	android:textSize="14.0sp" />
				
				<TextView
					android:layout_width="wrap_content"
		         	android:layout_height="wrap_content"
		         	android:gravity="center_vertical"
		         	android:paddingLeft="15.0sp"
		         	android:paddingTop="5.0sp"
		         	android:text="@string/desc_monza_2"
		         	android:textColor="#ff222222"
		         	android:textSize="14.0sp" />
				
	        </LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>


	