<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:background="#FFF2F2F2" >  
    
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
    
	<TextView
	    android:id="@+id/id_text"
		android:layout_width="50sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="ID" />
	
	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
	
	<TextView
	    android:id="@+id/pc_text"
		android:layout_width="70sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="PC" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
	
	<TextView
	    android:id="@+id/crc_text"
		android:layout_width="70sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="CRC" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
	
	<TextView
	    android:id="@+id/epc_text"
		android:layout_width="300sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="EPC" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
	
	<TextView
	    android:id="@+id/data_text"
		android:layout_width="400sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="@string/access_list_data" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
					
	<TextView
	    android:id="@+id/data_len_text"
		android:layout_width="80sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="@string/access_list_data_len" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
					
	<TextView
	    android:id="@+id/antenna_text"
		android:layout_width="80sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="@string/list_antenna_port" />

	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
	
	<TextView
	    android:id="@+id/times_text"
		android:layout_width="80sp"
		android:layout_height="wrap_content"
		android:padding="2sp"
		android:textSize="16sp"
		android:textColor="#ff333333"
		android:gravity="center"
		android:singleLine="true"
		android:text="@string/access_list_times" />
	
	<View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#BBBBBB" />
    
</LinearLayout>